<resources>
    <string name="app_name">PruebaInterfaz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attack">ATTACK</string>
    <string name="armor">ARMOR</string>
    <string name="health">HEALTH</string>
    <string name="skill">SKILL- </string>
    <string name="type">CARD TYPE</string>
    <string name="cost">COST</string>
    <string name="card_color">COLOR</string>
</resources>
