<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_green"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/cardImage"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/abaddon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_transparence"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:text="Abadon"
            android:textAlignment="center"
            android:textColor="@color/textForegroundLight"
            android:textSize="@dimen/textTitle"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="@string/attack"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="@string/armor"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="@string/health"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/atackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="4"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textSize="@dimen/number_font"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/armorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textSize="@dimen/number_font"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/healthText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="9"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textSize="@dimen/number_font"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/skillText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darckBack"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:text="@string/skill"
            android:textColor="@color/textForegroundLight"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>