<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".FragmentData">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgViewCarta"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="2"
            android:src="@drawable/bounty_hunter" />

        <TextView
            android:id="@+id/nameCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/back_black"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:gravity="center_vertical"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/textForegroundLight"
            android:textSize="@dimen/textTitle"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="@string/type"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="@string/cost"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="@string/card_color"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/typeCard"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher_round"
                tools:srcCompat="@drawable/hero" />

            <TextView
                android:id="@+id/costCard"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textSize="@dimen/font_size" />

            <ImageView
                android:id="@+id/colorCard"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher_round"
                app:srcCompat="@drawable/circle_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/typeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darckBack"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:text="ABILITY"
            android:textAlignment="center"
            android:textColor="@color/textForegroundLight"
            android:textSize="@dimen/number_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/actionInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="Action"
            android:textColor="@color/textForegroundLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/atackMssg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/armorMssg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/healthMssg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/atackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textSize="@dimen/number_font"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/armorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textSize="@dimen/number_font"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/healthText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darckBack"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:textAlignment="center"
                android:textColor="@color/textForegroundLight"
                android:textSize="@dimen/number_font"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>